--- a/roles/altfatterz.kibana/templates/kibana.yml.j2
+++ b/roles/altfatterz.kibana/templates/kibana.yml.j2
@@ -36,8 +36,8 @@ elasticsearch.url: "{{ kibana_elasticsearch_url }}"
 # the username and password that the Kibana server uses to perform maintenance on the Kibana
 # index at startup. Your Kibana users still need to authenticate with Elasticsearch, which
 # is proxied through the Kibana server.
-elasticsearch.username: "{{ kibana_elasticsearch_username }}"
-elasticsearch.password: "{{ kibana_elasticsearch_password }}"
+#elasticsearch.username: "{{ kibana_elasticsearch_username }}"
+#elasticsearch.password: "{{ kibana_elasticsearch_password }}"
 
 # Enables SSL and paths to the PEM-format SSL certificate and SSL key files, respectively.
 # These settings enable SSL for outgoing requests from the Kibana server to the browser.
